tworzymy konflikt USA

--- a/pom.xml
+++ b/pom.xml
@@ -4,5 +4,5 @@
   <artifactId>testG</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <!-- to jest slitasny komentarz -->
-  <!-- uiuieui  dfuhdf idfuhihr3iuhi dfhoooow -->
+  <!-- uiuieui  dfuhdf idfu Pro USA -->
 </project>
